Update README's and add cerner mock theme

--- a/packages/terra-avatar/src/Avatar.scss
+++ b/packages/terra-avatar/src/Avatar.scss
@@ -1,3 +1,5 @@
+/* Ignoring so that single quotes can be used in svg string */
+/* stylelint-disable string-quotes */
 @import '~terra-mixins';
 
 :local {
