--- a/packages/terra-avatar/src/Avatar.scss
+++ b/packages/terra-avatar/src/Avatar.scss
@@ -4,18 +4,30 @@
 
 :local {
   .avatar {
+    align-items: center;
     background-color: var(--terra-avatar-background-color, rgba(0, 0, 0, 0.1));
     border: var(--terra-avatar-border, 0.07143rem solid rgb(28, 31, 33));
     border-radius: 50%;
     box-shadow: var(--terra-avatar-box-shadow, inset 0 0.07143rem 0.2143rem 0 rgba(0, 0, 0, 0.3));
     color: var(--terra-avatar-color, rgb(0, 0, 0));
-    display: inline-block;
-    font-size: var(--terra-avatar-font-size, 1.571rem);
+    display: flex;
     height: var(--terra-avatar-size, 3.429rem);
-    line-height: var(--terra-avatar-line-height, 3.286rem);
+    justify-content: center;
+    line-height: var(--terra-avatar-line-height, 0.75);
     overflow: hidden;
-    text-align: center;
     width: var(--terra-avatar-size, 3.429rem);
+  }
+  
+  .avatar-text {
+    line-height: 0;
+    
+    &.avatar-text-large {
+      font-size: var(--terra-avatar-font-size-small, 1.571rem);
+    }
+    
+    &.avatar-text-small {
+      font-size: var(--terra-avatar-font-size-small, 16px);
+    }
   }
   
   .avatar-icon {
