--- a/packages/terra-section-header/src/SectionHeader.scss
+++ b/packages/terra-section-header/src/SectionHeader.scss
@@ -1,5 +1,44 @@
+@import '~terra-mixins';
+
 :local {
   .section-header {
-    background-color: #f00; // TODO: remove
+    @include terra-padding-end(var(--terra-section-header-padding-end, 0.7142857143rem));
+    @include terra-padding-start(var(--terra-section-header-padding-start, 0.5rem));
+   
+    background: var(--terra-section-header-background, #cfd0d1);
+    border: var(--terra-section-header-border, 1px solid #1c1f21);
+    display: flex;
+    flex-wrap: nowrap;
+    padding-bottom: var(--terra-section-header-padding-bottom, 0.5rem); // TODO: replace with real value
+    padding-top: var(--terra-section-header-padding-top, 0.5rem); // TODO: replace with real value
+  }
+
+  .title {
+    text-transform: var(--terra-section-header-text-transform, none);
+  }
+
+  .glyph {
+    @include terra-margin-end(0.2142857143rem);
+    
+    cursor: pointer;
+    
+    > svg {
+      background-repeat: no-repeat;
+      background-size: contain;
+      height: 10px; // TODO: replace with real value
+      width: 10px; // TODO: replace with real value
+    }
+
+    .accordion-glyph {
+      background: var(--terra-section-header-accordion-glyph, inline-svg("<svg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 48 48' enable-background='new 0 0 48 48' xml:space='preserve'><title>0023_caretRight_a</title><path id='caretRight' d='M12,0l24,24L12,48V0z'/></svg>"));
+      
+      &.is-animated {
+        // TODO: implement animation styling
+      }
+
+      &.is-open {
+        // TODO: implement open styling
+      }
+    }
   }
 }
